added image and added in new text. styled w flex box

--- a/index.html
+++ b/index.html
@@ -11,17 +11,24 @@
 <body>
 
   <div class="head-shot">
-    <img src="" alt="">
+    <img class="my-head"src="photos/IMG_4136.png" alt="">
   </div>
 
-<!--1.TODO (TM): Create buttons from block-buttons using boostrap-->
+  <div class="text">
+  <h3>Trevor Mustoe Links</h3>
+  <p>Text Me: 727-686-6666</p>
+  </div>
+<!--X 1.TODO (TM): Create buttons from block-buttons using boostrap X-->
 <!--2.TODO (TM): Add in image html-->
 <!--3.TODO (TM): Find Icons for socials-->
 <!--4.TODO (TM): Make style buttons and add background image-->
 
   <div class="d-grid gap-2 col-6 mx-auto">
-    <button class="btn btn-primary" type="button">Button</button>
-    <button class="btn btn-primary" type="button">Button</button>
+    <button class="btn btn-dark" type="button">Hack For The Community</button>
+    <button class="btn btn-dark" type="button">Text Me!</button>
+    <button class="btn btn-dark" type="button">Code Portfolio</button>
+    <button class="btn btn-dark" type="button">My Website</button>
+    <button class="btn btn-dark" type="button">Next JS, Storybook starter Template</button>
   </div>
 
 
