cleaned up old code

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <p>Text Me: 727-686-6666</p>
   </div>
 <!--X 1.TODO (TM): Create buttons from block-buttons using boostrap X-->
-<!--2.TODO (TM): Add in image html-->
+<!--X 2.TODO (TM): Add in image html-->
 <!--3.TODO (TM): Find Icons for socials-->
 <!--4.TODO (TM): Make style buttons and add background image-->
 
