Changed all links on the site for new links

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   </div>
 
   <div class="text">
-  <h3>Trevor Mustoe Links</h3>
-  <p>Text Me: 727-686-6666</p>
+  <h3>Trevor Mustoe Project Links</h3>
   </div>
 <!--X 1.TODO (TM): Create buttons from block-buttons using boostrap X-->
 <!--X 2.TODO (TM): Add in image html-->
@@ -24,11 +23,13 @@
 <!--4.TODO (TM): Make style buttons and add background image-->
 
   <div class="d-grid gap-2 col-6 mx-auto">
-    <button class="btn btn-dark" type="button">Hack For The Community</button>
-    <button class="btn btn-dark" type="button">Text Me!</button>
-    <button class="btn btn-dark" type="button">Code Portfolio</button>
-    <button class="btn btn-dark" type="button">My Website</button>
-    <button class="btn btn-dark" type="button">Next JS, Storybook starter Template</button>
+    
+    <a href="https://pet-adoption-trevor-mustoe.netlify.app/" class="btn btn-dark" type="button" >Pet Adoption Website</a>
+
+    <a href="https://product-cards-trevor-mustoe.netlify.app/" class="btn btn-dark" type="button">Product Card Site</a>
+
+    <a href="https://litho-beta.netlify.app/" class="btn btn-dark" type="button">Lithocrete Website BETA</a>
+    <a href="https://calculator-lab-trevor-mustoe.netlify.app/" class="btn btn-dark" type="button">Calculator Lab</a>
   </div>
 
 
