Chaged h3 tag added page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </div>
 
   <div class="text">
-  <h3>Trevor Mustoe Project Links</h3>
+  <h3>Trevor Mustoe Project Links Page</h3>
   </div>
 <!--X 1.TODO (TM): Create buttons from block-buttons using boostrap X-->
 <!--X 2.TODO (TM): Add in image html-->
