Added some fun css and background gradient

--- a/index.html
+++ b/index.html
@@ -14,24 +14,25 @@
     <img class="my-head"src="photos/IMG_4136.png" alt="">
   </div>
 
+<div class="main-container">
   <div class="text">
   <h3>Trevor Mustoe Project Links Page</h3>
   </div>
-<!--X 1.TODO (TM): Create buttons from block-buttons using boostrap X-->
-<!--X 2.TODO (TM): Add in image html-->
+
+
 <!--3.TODO (TM): Find Icons for socials-->
 <!--4.TODO (TM): Make style buttons and add background image-->
 
-  <div class="d-grid gap-2 col-6 mx-auto">
+<div class="d-grid gap-2 col-6 mx-auto">
     
-    <a href="https://pet-adoption-trevor-mustoe.netlify.app/" class="btn btn-dark" type="button" >Pet Adoption Website</a>
+  <a href="https://pet-adoption-trevor-mustoe.netlify.app/" class="btn btn-dark" type="button" >Pet Adoption Website</a>
 
-    <a href="https://product-cards-trevor-mustoe.netlify.app/" class="btn btn-dark" type="button">Product Card Site</a>
+  <a href="https://product-cards-trevor-mustoe.netlify.app/" class="btn btn-dark" type="button">Product Card Site</a>
 
-    <a href="https://litho-beta.netlify.app/" class="btn btn-dark" type="button">Lithocrete Website BETA</a>
-    <a href="https://calculator-lab-trevor-mustoe.netlify.app/" class="btn btn-dark" type="button">Calculator Lab</a>
-  </div>
-
+  <a href="https://litho-beta.netlify.app/" class="btn btn-dark" type="button">Lithocrete Website BETA</a>
+  <a href="https://calculator-lab-trevor-mustoe.netlify.app/" class="btn btn-dark" type="button">Calculator Lab</a>
+</div>
+</div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 
