--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <div class="head-shot">
-    <img class="my-head"src="photos/IMG_4136.png" alt="">
+    <img class="my-head"src="photos/IMG_5732.jpg" alt="">
   </div>
 
 <div class="main-container">
