added in new links

--- a/index.html
+++ b/index.html
@@ -29,8 +29,16 @@
 
   <a href="https://product-cards-trevor-mustoe.netlify.app/" class="btn btn-dark" type="button">Product Card Site</a>
 
-  <a href="https://litho-beta.netlify.app/" class="btn btn-dark" type="button">Lithocrete Website BETA</a>
+  <a href="https://word-counter-trevor-mustoe.netlify.app/" class="btn btn-dark" type="button">Word Counter</a>
+
+
+  <a href="https://trevor-mustoe-resume.netlify.app/" class="btn btn-dark" type="button"> Trevor's Résumé</a>
+
+
   <a href="https://calculator-lab-trevor-mustoe.netlify.app/" class="btn btn-dark" type="button">Calculator Lab</a>
+
+  <a href="https://litho-beta.netlify.app/" class="btn btn-dark" type="button">Lithocrete Website BETA</a>
+
 </div>
 </div>
 
